--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,9 @@
 name: flutter_project_upgrader
 description: "A CLI tool to upgrade old Flutter projects (Gradle, Kotlin, iOS Podfile, etc.)"
 version: 0.0.1
-homepage:
+homepage: https://github.com/Gourav-sharma/flutter_project_upgrader
+repository: https://github.com/Gourav-sharma/flutter_project_upgrader
+issue_tracker: https://github.com/Gourav-sharma/flutter_project_upgrader/issues
 
 environment:
   sdk: ">=3.0.0 <4.0.0"
@@ -11,6 +13,7 @@ executables:
   flutter_project_upgrader:
 
 dependencies:
+  args: ^2.4.2
   flutter:
     sdk: flutter
 
